[package]
name = "substantiate"
version = "0.1.0"
authors = ["Ronuk Raval <ronuk.raval@gmail.com>"]
edition = "2018"
description = "Declaratively manage paths and run commands in them"
repository = "https://github.com/rraval/substantiate"
license = "MIT"

[dependencies]
anyhow = "1"
directories = "3"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
