[package]
name = "substantiate"
version = "0.1.0"
authors = ["Ronuk Raval <ronuk.raval@gmail.com>"]
edition = "2018"
description = "Declaratively manage paths and run commands in them"
repository = "https://github.com/rraval/substantiate"
license = "MIT"

[dependencies]
anyhow = "^1.0.41"
clap = "^2.33.3"
data-encoding = "^2.3.2"
directories = "^3.0.2"
os_str_bytes = "^3.1.0"
serde = { version = "^1.0.126", features = ["derive"] }
sha2 = "^0.9.5"
symlink = "^0.1.0"
toml = "^0.5.8"
